# weir-rs

./: Cargo.toml  README.md
examples/: lines.rs
src/: grph.rs  lib.rs  macros.rs
src/draw/: mod.rs  sandpaint.rs
src/geometry/: point.rs
src/helpers/: grid.rs  math.rs  mod.rs  round.rs
src/traits/: colors.rs  common.rs  mod.rs  projection.rs  random.rs
