[package]
name = "weir-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
nalgebra = "0.30.1"
rand={version="*", features=["small_rng"]}
image = "0.23.4"
libm = "0.2.1"
glam = "0.20.2"

[profile.release]
panic = 'abort'
